# goetia

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: filter_api.rs  language_api.rs  mod.rs
src/config/: hyperparameters.rs  mod.rs
src/generator/: history.rs  mod.rs  story_generator.rs  text_generator.rs
src/models/: character..rs  character.rs  mod.rs  place.rs  scene.rs  story.rs  title.rs
src/prompts/: templates.rs
src/tests/: generation_history.rs  story_generator.rs
src/utils/: diff.rs  extract.rs  mod.rs
