[package]
name = "dramatron-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Dramatron script-writing tool"
license = "Apache-2.0"
repository = "https://github.com/your-repo/dramatron-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
anyhow = "1.0"


[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }